# ServerWrapper

./: .gitignore  Cargo.toml  LICENSE  README.md  pubspec.yaml
.github/workflows/: build.yml  dart.yml
lib/: api_response.dart  api_response.g.dart  config.dart  config.g.dart  injector.dart  serverwrapper.dart  starter.dart
src/: main.rs
src/core/: config.rs  http.rs  mod.rs  start.rs
test/: serverwrapper_test.dart
